@@ -2,6 +2,7 @@ Changes in 1.25.1:
  * Fix crash with 2D dataset expression
  * Fix bug with 2D X,Y,Z dataset expression
  * Better error checking in Gnuplot import plugin
+ * Catch non-single character delimiters for 2D CSV import
 
 Changes in 1.25:
  * Add n-dimensional dataset support
